welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:39: error: ')' expected but 'return' found.
	return tab(num)
        ^